[development][1.3.1][FEATURE][SKELETON_TICKET_NUMBER][define new swagger models for user and role then generate it for Go]
