# gen/models/model_birthdate.go
@@ -1,0 +1,27 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+)
+
+// ModelBirthdate model birthdate
+//
+// swagger:model modelBirthdate
+type ModelBirthdate uint64
+
+// Validate validates this model birthdate
+func (m ModelBirthdate) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this model birthdate based on context it is used
+func (m ModelBirthdate) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
