# gen/models/model_email.go
@@ -1,0 +1,42 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/validate"
+)
+
+// ModelEmail model email
+//
+// swagger:model modelEmail
+type ModelEmail strfmt.Email
+
+// Validate validates this model email
+func (m ModelEmail) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := validate.MaxLength("", "body", strfmt.Email(m).String(), 255); err != nil {
+		return err
+	}
+
+	if err := validate.FormatOf("", "body", "email", strfmt.Email(m).String(), formats); err != nil {
+		return err
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// ContextValidate validates this model email based on context it is used
+func (m ModelEmail) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
