# gen/models/model_fullname.go
@@ -1,0 +1,38 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/validate"
+)
+
+// ModelFullname model fullname
+//
+// swagger:model modelFullname
+type ModelFullname string
+
+// Validate validates this model fullname
+func (m ModelFullname) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := validate.MaxLength("", "body", string(m), 255); err != nil {
+		return err
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// ContextValidate validates this model fullname based on context it is used
+func (m ModelFullname) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
