# gen/models/model_role_ids.go
@@ -1,0 +1,27 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+)
+
+// ModelRoleIds model role ids
+//
+// swagger:model modelRoleIds
+type ModelRoleIds []uint64
+
+// Validate validates this model role ids
+func (m ModelRoleIds) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this model role ids based on context it is used
+func (m ModelRoleIds) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
