# gen/models/model_role_name.go
@@ -1,0 +1,38 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/validate"
+)
+
+// ModelRoleName model role name
+//
+// swagger:model modelRoleName
+type ModelRoleName string
+
+// Validate validates this model role name
+func (m ModelRoleName) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := validate.MaxLength("", "body", string(m), 128); err != nil {
+		return err
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// ContextValidate validates this model role name based on context it is used
+func (m ModelRoleName) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
