# gen/models/model_username.go
@@ -1,0 +1,38 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/validate"
+)
+
+// ModelUsername model username
+//
+// swagger:model modelUsername
+type ModelUsername string
+
+// Validate validates this model username
+func (m ModelUsername) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := validate.MaxLength("", "body", string(m), 255); err != nil {
+		return err
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// ContextValidate validates this model username based on context it is used
+func (m ModelUsername) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
