# gen/models/user.go
@@ -1,0 +1,162 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// User user
+//
+// swagger:model user
+type User struct {
+	ModelIdentifier
+
+	ModelTraceTime
+
+	ModelTraceLastModifiedBy
+
+	UserData
+}
+
+// UnmarshalJSON unmarshals this object from a JSON structure
+func (m *User) UnmarshalJSON(raw []byte) error {
+	// AO0
+	var aO0 ModelIdentifier
+	if err := swag.ReadJSON(raw, &aO0); err != nil {
+		return err
+	}
+	m.ModelIdentifier = aO0
+
+	// AO1
+	var aO1 ModelTraceTime
+	if err := swag.ReadJSON(raw, &aO1); err != nil {
+		return err
+	}
+	m.ModelTraceTime = aO1
+
+	// AO2
+	var aO2 ModelTraceLastModifiedBy
+	if err := swag.ReadJSON(raw, &aO2); err != nil {
+		return err
+	}
+	m.ModelTraceLastModifiedBy = aO2
+
+	// AO3
+	var aO3 UserData
+	if err := swag.ReadJSON(raw, &aO3); err != nil {
+		return err
+	}
+	m.UserData = aO3
+
+	return nil
+}
+
+// MarshalJSON marshals this object to a JSON structure
+func (m User) MarshalJSON() ([]byte, error) {
+	_parts := make([][]byte, 0, 4)
+
+	aO0, err := swag.WriteJSON(m.ModelIdentifier)
+	if err != nil {
+		return nil, err
+	}
+	_parts = append(_parts, aO0)
+
+	aO1, err := swag.WriteJSON(m.ModelTraceTime)
+	if err != nil {
+		return nil, err
+	}
+	_parts = append(_parts, aO1)
+
+	aO2, err := swag.WriteJSON(m.ModelTraceLastModifiedBy)
+	if err != nil {
+		return nil, err
+	}
+	_parts = append(_parts, aO2)
+
+	aO3, err := swag.WriteJSON(m.UserData)
+	if err != nil {
+		return nil, err
+	}
+	_parts = append(_parts, aO3)
+	return swag.ConcatJSON(_parts...), nil
+}
+
+// Validate validates this user
+func (m *User) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	// validation for a type composition with ModelIdentifier
+	if err := m.ModelIdentifier.Validate(formats); err != nil {
+		res = append(res, err)
+	}
+	// validation for a type composition with ModelTraceTime
+	if err := m.ModelTraceTime.Validate(formats); err != nil {
+		res = append(res, err)
+	}
+	// validation for a type composition with ModelTraceLastModifiedBy
+	if err := m.ModelTraceLastModifiedBy.Validate(formats); err != nil {
+		res = append(res, err)
+	}
+	// validation for a type composition with UserData
+	if err := m.UserData.Validate(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// ContextValidate validate this user based on the context it is used
+func (m *User) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	// validation for a type composition with ModelIdentifier
+	if err := m.ModelIdentifier.ContextValidate(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+	// validation for a type composition with ModelTraceTime
+	if err := m.ModelTraceTime.ContextValidate(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+	// validation for a type composition with ModelTraceLastModifiedBy
+	if err := m.ModelTraceLastModifiedBy.ContextValidate(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+	// validation for a type composition with UserData
+	if err := m.UserData.ContextValidate(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *User) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *User) UnmarshalBinary(b []byte) error {
+	var res User
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
